--- a/app/web/index.html
+++ b/app/web/index.html
@@ -31,6 +31,9 @@
 
   <title>app</title>
   <link rel="manifest" href="manifest.json">
+
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_ERssLhe5DWC-aQKhVII8NSIgDQr9so8"></script>
+
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
